// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly 1`] = `
<DocumentFragment>
  .cache-1e2hdzv-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e2hdzv-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1e2hdzv-variantStyles .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ygl3ye {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-3cadt6-sizeStyles {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-3cadt6-sizeStyles.cache-3cadt6-sizeStyles {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-ygl3ye eu28k4m2"
        name="test"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly checked without value 1`] = `
<DocumentFragment>
  .cache-1e2hdzv-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e2hdzv-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1e2hdzv-variantStyles .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ygl3ye {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-3cadt6-sizeStyles {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-3cadt6-sizeStyles.cache-3cadt6-sizeStyles {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="cache-ygl3ye eu28k4m2"
        name="checked"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1e2hdzv-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e2hdzv-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1e2hdzv-variantStyles .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ygl3ye {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-3cadt6-sizeStyles {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-3cadt6-sizeStyles.cache-3cadt6-sizeStyles {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-invalid="false"
        class="cache-ygl3ye eu28k4m2"
        disabled=""
        name="test"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        disabled=""
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with a value 1`] = `
<DocumentFragment>
  .cache-1e2hdzv-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e2hdzv-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1e2hdzv-variantStyles .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ygl3ye {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-3cadt6-sizeStyles {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-3cadt6-sizeStyles.cache-3cadt6-sizeStyles {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-ygl3ye eu28k4m2"
        name="value"
        type="checkbox"
        value="foo"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
    </label>
    <label
      aria-disabled="false"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="cache-ygl3ye eu28k4m2"
        name="value"
        type="checkbox"
        value="bar"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </label>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-1e2hdzv-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e2hdzv-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1e2hdzv-variantStyles .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ygl3ye {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-3cadt6-sizeStyles {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-3cadt6-sizeStyles.cache-3cadt6-sizeStyles {
  vertical-align: middle;
}

.cache-98wp94-bodyB-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  color: #a6102d;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="false"
        aria-describedby="test-hint"
        aria-invalid="true"
        class="cache-ygl3ye eu28k4m2"
        name="test"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      Checkbox field error
    </label>
    <p
      class="eu28k4m4 e1g1zfwd0 cache-98wp94-bodyB-variantStyles-colorStyles"
      id="test-id"
    >
      This field is required
    </p>
    <div>
      Focus
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1e2hdzv-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1e2hdzv-variantStyles[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-checked="true"]+.eu28k4m3 {
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1e2hdzv-variantStyles[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1e2hdzv-variantStyles .eu28k4m2:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles .eu28k4m2[aria-invalid="true"]:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1e2hdzv-variantStyles:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ygl3ye {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-3cadt6-sizeStyles {
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  margin-right: 8px;
  border-radius: 4px;
  color: #4a4f62;
}

.cache-3cadt6-sizeStyles.cache-3cadt6-sizeStyles {
  vertical-align: middle;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="eu28k4m1 e1g1zfwd0 cache-1e2hdzv-variantStyles"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        class="cache-ygl3ye eu28k4m2"
        name="test"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-3cadt6-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      Checkbox field events
    </label>
  </form>
</DocumentFragment>
`;
